Lab 01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weaviate-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /weaviate
        backend:
          service:
            name: weaviate
            port:
              number: 80
      - pathType: Prefix
        path: /weaviategrpc
        backend:
          service:
            name: weaviate-grpc
            port:
              number: 50051
